--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,9 @@ jobs:
     - name: Login to AWS ECR
       run: echo "${{ secrets.AWS_SECRET_ACCESS_KEY }}" | docker login --username AWS --password-stdin "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com"
       env:
-       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-       AWS_REGION: ${{ secrets.AWS_REGION }}
-
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
 
     - name: Build Docker image
       run: docker build -t react-repo/react-app:latest .
@@ -38,14 +37,10 @@ jobs:
     - name: Push Docker image to ECR
       run: docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/react-repo/react-app:latest
 
-    - name: Initialize Terraform
-      run: terraform init
-
-    - name: Apply Terraform
-      run: terraform apply -auto-approve
-
-    - name: Deploy to ECS
-      run: terraform apply -auto-approve
+    - name: Initialize and Apply Terraform
+      run: |
+        terraform init
+        terraform apply -auto-approve
 
     - name: Clean up
       run: terraform destroy -auto-approve
