--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,12 @@ jobs:
        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
        AWS_REGION: ${{ secrets.AWS_REGION }}
 
+    - name: Update AWS CLI
+      run: |
+       sudo apt-get install -y python3-pip
+       pip3 install --upgrade awscli
+
+
 
     - name: Build Docker image
       run: docker build -t react-repo/react-app:latest .
